manifests-dvja/deployment-dvja.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvja
  namespace: training
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dvja
  template:
    metadata:
      labels:
        app: dvja
    spec:
      containers:
        - name: dvja
          image: skacode/dvja:latest
          ports:
            - containerPort: 8080
