manifests-dvja/service-dvja.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvja
  namespace: training
spec:
  type: NodePort
  selector:
    app: dvja
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
